Use Path.of() for path validation