@@ -61,7 +61,7 @@ final class WorldRecreateCommand extends OptionCommand {
         var world = context.getArgument("world", World.class);
         var name = context.getArgument("name", String.class);
 
-        if (Paths.get(name).getNameCount() != 1) {
+        if (Path.of(name).getNameCount() != 1) {
             plugin.bundle().sendMessage(sender, "world.subfolders.create");
             return 0;
         }
